<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/title_action_sort"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_popular"
                    android:title="@string/title_action_sort_popular" />
                <item
                    android:id="@+id/action_sort_rating"
                    android:title="@string/title_action_sort_rating"/>
                <item
                    android:id="@+id/action_sort_date"
                    android:title="@string/title_action_sort_date"/>
                <item
                    android:id="@+id/action_sort_favorite"
                    android:title="@string/title_action_sort_favorite"/>
            </group>
        </menu>
    </item>

</menu>