<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movieReview"
            type="com.diskin.alon.movieguide.reviews.presentation.data.MovieReview" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_movie_review"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:titleEnabled="false"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/back_drop_image"
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:loadImage="@{movieReview.backDropImageUrl}"
                        app:layout_constraintDimensionRatio="4:3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars[2]" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintDimensionRatio="4:3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@drawable/gradient2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarSize="4dp"
            android:scrollbarThumbVertical="?attr/colorSecondary"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/review_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_margin"
                android:layout_marginEnd="@dimen/item_margin"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="4dp"
                    android:text="@{movieReview.title}"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    tools:text="@string/stub_movie_title" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:text="@{movieReview.rating}"
                    tools:text="@string/stub_movie_rating"/>

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:text="@{movieReview.genres}"
                    tools:text="@string/stub_movie_genre" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:text="@{movieReview.releaseDate}"
                    tools:text="@string/stub_movie_release" />

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text="@{movieReview.summary}"
                    android:layout_marginTop="16dp"
                    tools:text="@string/stub_movie_summary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_trailers" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:scrollbarThumbHorizontal="@color/colorAccent"
                    android:scrollbars="horizontal"
                    tools:listitem="@layout/movie_trailer"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_review" />

                <TextView
                    android:id="@+id/review_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text="@{movieReview.review}"
                    android:layout_marginBottom="@dimen/item_margin"
                    tools:text="@string/stub_movie_review"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_gravity="center"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>